Corrigido 403 em produção com server.forward-headers-strategy